--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
           <a href="#contact" localize="nav.contact">Contact</a>
         </div>
         <div class="lang-switcher">
-          <button onclick="switchLanguage('en')">EN</button>
-          <button onclick="switchLanguage('fr')">FR</button>
+          <button onclick="toggleLanguage()" id="langToggle">FR</button>
         </div>
       </nav>
     </header>
