--- a/index.html
+++ b/index.html
@@ -3,93 +3,93 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elite Construction & Remodeling</title>
+    <title>RenoCuisine</title>
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <header>
       <nav>
-        <div class="logo">Elite Construction</div>
+        <div class="logo">RenoCuisine</div>
         <div class="nav-links">
-          <a href="#services" localize="nav.services">Services</a>
-          <a href="#projects" localize="nav.projects">Projects</a>
-          <a href="#about" localize="nav.about">About</a>
-          <a href="#contact" localize="nav.contact">Contact</a>
+          <a href="#services" localize="nav.services"></a>
+          <a href="#projects" localize="nav.projects"></a>
+          <a href="#about" localize="nav.about"></a>
+          <a href="#contact" localize="nav.contact"></a>
         </div>
         <div class="lang-switcher">
-          <button onclick="toggleLanguage()" id="langToggle">FR</button>
+          <button onclick="toggleLanguage()" id="langToggle"></button>
         </div>
       </nav>
     </header>
 
     <section class="hero">
       <div class="hero-content">
-        <h1 localize="hero.title">Quality Construction & Remodeling Services</h1>
-        <p localize="hero.subtitle">Transform your space with our expert craftsmanship</p>
-        <button onclick="scrollToContact()" localize="hero.cta">Get Free Quote</button>
+        <h1 localize="hero.title"></h1>
+        <p localize="hero.subtitle"></p>
+        <button onclick="scrollToContact()" localize="hero.cta"></button>
       </div>
     </section>
 
     <section id="services" class="services">
-      <h2 localize="services.title">Our Services</h2>
+      <h2 localize="services.title"></h2>
       <div class="service-grid">
         <div class="service-card">
-          <h3 localize="services.renovation.title">Home Renovation</h3>
-          <p localize="services.renovation.desc">Complete home makeovers and renovations</p>
+          <h3 localize="services.renovation.title"></h3>
+          <p localize="services.renovation.desc"></p>
         </div>
         <div class="service-card">
-          <h3 localize="services.kitchen.title">Kitchen Remodeling</h3>
-          <p localize="services.kitchen.desc">Custom kitchen designs and installations</p>
+          <h3 localize="services.kitchen.title"></h3>
+          <p localize="services.kitchen.desc"></p>
         </div>
         <div class="service-card">
-          <h3 localize="services.bathroom.title">Bathroom Updates</h3>
-          <p localize="services.bathroom.desc">Modern bathroom renovations</p>
+          <h3 localize="services.bathroom.title"></h3>
+          <p localize="services.bathroom.desc"></p>
         </div>
         <div class="service-card">
-          <h3 localize="services.carpentry.title">Custom Carpentry</h3>
-          <p localize="services.carpentry.desc">Bespoke woodwork and installations</p>
+          <h3 localize="services.carpentry.title"></h3>
+          <p localize="services.carpentry.desc"></p>
         </div>
       </div>
     </section>
 
     <section id="projects" class="projects">
-      <h2 localize="projects.title">Recent Projects</h2>
+      <h2 localize="projects.title"></h2>
       <div class="project-grid">
         <div class="project-card">
           <div class="project-image" style="background-image: url('https://images.unsplash.com/photo-1484154218962-a197022b5858')"></div>
-          <h3 localize="projects.kitchen.title">Modern Kitchen Renovation</h3>
-          <p localize="projects.kitchen.desc">Complete kitchen remodel with custom cabinets</p>
+          <h3 localize="projects.kitchen.title"></h3>
+          <p localize="projects.kitchen.desc"></p>
         </div>
         <div class="project-card">
           <div class="project-image" style="background-image: url('https://images.unsplash.com/photo-1552242718-c5360894aecd')"></div>
-          <h3 localize="projects.bathroom.title">Luxury Bathroom</h3>
-          <p localize="projects.bathroom.desc">High-end bathroom renovation</p>
+          <h3 localize="projects.bathroom.title"></h3>
+          <p localize="projects.bathroom.desc"></p>
         </div>
         <div class="project-card">
           <div class="project-image" style="background-image: url('https://images.unsplash.com/photo-1513694203232-719a280e022f')"></div>
-          <h3 localize="projects.addition.title">Home Addition</h3>
-          <p localize="projects.addition.desc">Two-story addition with master suite</p>
+          <h3 localize="projects.addition.title"></h3>
+          <p localize="projects.addition.desc"></p>
         </div>
       </div>
     </section>
 
     <section id="about" class="about">
-      <h2 localize="about.title">About Us</h2>
-      <p localize="about.content">With over 20 years of experience, we pride ourselves on delivering exceptional craftsmanship and customer service. Our team of skilled professionals is dedicated to bringing your vision to life while maintaining the highest standards of quality and safety.</p>
+      <h2 localize="about.title"></h2>
+      <p localize="about.content"></p>
     </section>
 
     <section id="contact" class="contact">
-      <h2 localize="contact.title">Contact Us</h2>
+      <h2 localize="contact.title"></h2>
       <div class="contact-container">
         <form id="contactForm" onsubmit="handleSubmit(event)">
           <input type="text" localize="contact.name" placeholder="Name" required>
           <input type="email" localize="contact.email" placeholder="Email" required>
           <input type="tel" localize="contact.phone" placeholder="Phone">
           <textarea localize="contact.message" placeholder="Tell us about your project" required></textarea>
-          <button type="submit" localize="contact.submit">Send Message</button>
+          <button type="submit" localize="contact.submit"></button>
         </form>
         <div class="contact-info">
-          <h3 localize="contact.getInTouch">Get In Touch</h3>
+          <h3 localize="contact.getInTouch"></h3>
           <p>📱 (555) 123-4567</p>
           <p>📧 info@eliteconstruction.com</p>
           <p>📍 123 Builder Street, Construction City, ST 12345</p>
@@ -98,7 +98,7 @@
     </section>
 
     <footer>
-      <p>&copy; 2024 Elite Construction & Remodeling. All rights reserved.</p>
+      <p localize="footer.copyrights"></p>
     </footer>
 
     <script type="module" src="/main.js"></script>
