--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RenoCuisine</title>
+    <title>Espace Sur Mesure Inc.</title>
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <header>
       <nav>
-        <div class="logo">RenoCuisine</div>
+        <div class="logo">Espace Sur Mesure Inc.</div>
         <div class="nav-links">
           <a href="#services" localize="nav.services"></a>
           <a href="#projects" localize="nav.projects"></a>
