--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section id="contact" class="contact">
       <h2 localize="contact.title"></h2>
       <div class="contact-container">
-        <form id="contactForm" onsubmit="handleSubmit(event)">
+        <form id="contactForm" netlify>
           <input type="text" localize="contact.name" placeholder="Name" required>
           <input type="email" localize="contact.email" placeholder="Email" required>
           <input type="tel" localize="contact.phone" placeholder="Phone">
