--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
     <section id="contact" class="contact">
       <h2 localize="contact.title"></h2>
       <div class="contact-container">
-        <form id="contactForm" netlify>
-          <input type="text" localize="contact.name" placeholder="Name" required>
-          <input type="email" localize="contact.email" placeholder="Email" required>
-          <input type="tel" localize="contact.phone" placeholder="Phone">
-          <textarea localize="contact.message" placeholder="Tell us about your project" required></textarea>
-          <button type="submit" localize="contact.submit"></button>
+        <form id="contactForm" name="Soumission" netlify>
+          <input type="text" name="name" localize="contact.name" placeholder="Name" required>
+          <input type="email" name="email" localize="contact.email" placeholder="Email" required>
+          <input type="tel" name="phone" localize="contact.phone" placeholder="Phone">
+          <textarea name="message" localize="contact.message" placeholder="Tell us about your project" required></textarea>
+          <button type="submit" localize="contact.submit">Submit</button>
         </form>
         <div class="contact-info">
           <h3 localize="contact.getInTouch"></h3>
