tweaks + local images

--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
       <h2 localize="projects.title"></h2>
       <div class="project-grid">
         <div class="project-card">
-          <div class="project-image" style="background-image: url('https://images.unsplash.com/photo-1484154218962-a197022b5858')"></div>
+          <div class="project-image" style="background-image: url('/1.jpg')"></div>
           <h3 localize="projects.kitchen.title"></h3>
           <p localize="projects.kitchen.desc"></p>
         </div>
         <div class="project-card">
-          <div class="project-image" style="background-image: url('https://images.unsplash.com/photo-1552242718-c5360894aecd')"></div>
+          <div class="project-image" style="background-image: url('/2.jpg')"></div>
           <h3 localize="projects.bathroom.title"></h3>
           <p localize="projects.bathroom.desc"></p>
         </div>
         <div class="project-card">
-          <div class="project-image" style="background-image: url('https://images.unsplash.com/photo-1513694203232-719a280e022f')"></div>
+          <div class="project-image" style="background-image: url('/3.jpg')"></div>
           <h3 localize="projects.addition.title"></h3>
           <p localize="projects.addition.desc"></p>
         </div>
@@ -86,7 +86,7 @@
           <input type="email" name="email" localize="contact.email" placeholder="Email" required>
           <input type="tel" name="phone" localize="contact.phone" placeholder="Phone">
           <textarea name="message" localize="contact.message" placeholder="Tell us about your project" required></textarea>
-          <button type="submit" localize="contact.submit">Submit</button>
+          <button type="submit" localize="contact.submit"></button>
         </form>
         <div class="contact-info">
           <h3 localize="contact.getInTouch"></h3>
