--- a/en/index.html
+++ b/en/index.html
@@ -90,7 +90,7 @@
         <input type="email" name="email" placeholder="Email" required>
         <input type="tel" name="phone" placeholder="Phone">
         <textarea name="message" placeholder="Tell us about your project" required></textarea>
-        <button type="submit"></button>
+        <button type="submit">Send</button>
       </form>
       <div class="contact-info">
         <h3>Get In Touch</h3>
