--- a/en/index.html
+++ b/en/index.html
@@ -83,6 +83,22 @@
       highest standards of quality and safety.</p>
   </section>
 
+  <section id="team" class="team">
+    <h2>Our Team</h2>
+    <div class="team-grid">
+      <div class="team-card">
+        <img src="/team-1.jpg" alt="Team Member 1">
+        <h3>John Doe</h3>
+        <p>Project Manager</p>
+      </div>
+      <div class="team-card">
+        <img src="/team-2.jpg" alt="Team Member 2">
+        <h3>Jane Smith</h3>
+        <p>Lead Designer</p>
+      </div>
+    </div>
+  </section>
+
   <section id="contact" class="contact">
     <h2>Contact Us</h2>
     <div class="contact-container">
