--- a/fr/index.html
+++ b/fr/index.html
@@ -27,8 +27,8 @@
 
   <section class="hero">
     <div class="hero-content">
-      <h1>Services de Construction et de Rénovation de Qualité</h1>
-      <p>Transformez votre espace avec notre expertise artisanale</p>
+      <h1>Vos experts en installation d'armoires</h1>
+      <p>Nous transformons votre espace avec des armoires sur mesure, installées avec précision.</p>
       <button onclick="scrollToContact()">Soumission Gratuite</button>
     </div>
   </section>
@@ -37,20 +37,20 @@
     <h2>Nos Services</h2>
     <div class="service-grid">
       <div class="service-card">
-        <h3>Rénovation Résidentielle</h3>
-        <p>Transformations et rénovations complètes</p>
+        <h3>Cuisine</h3>
+        <p>Installation d’armoires de cuisine</p>
       </div>
       <div class="service-card">
-        <h3>Rénovation de Cuisine</h3>
-        <p>Conception et installation de cuisines sur mesure</p>
+        <h3>Salle de bain</h3>
+        <p>Installation d’armoire de salle de bain</p>
       </div>
       <div class="service-card">
-        <h3>Rénovation de Salle de Bain</h3>
-        <p>Rénovations modernes de salles de bain</p>
+        <h3>Rangement</h3>
+        <p>Fabrication et installation d’armoire de rangement</p>
       </div>
       <div class="service-card">
-        <h3>Menuiserie Sur Mesure</h3>
-        <p>Travaux de bois et installations personnalisées</p>
+        <h3>Finition intérieure</h3>
+        <p>Installation de moulures, dosserets, portes intérieures, et bien plus.</p>
       </div>
     </div>
   </section>
@@ -58,7 +58,8 @@
   <section id="projects" class="projects">
     <h2>Projets Récents</h2>
     <div class="project-grid">
-      <div class="project-card">
+      <span>À venir...</span>
+      <!-- <div class="project-card">
         <div class="project-image" style="background-image: url('/1.jpg')"></div>
         <h3>Rénovation de Cuisine Moderne</h3>
         <p>Rénovation complète avec armoires sur mesure</p>
@@ -72,13 +73,35 @@
         <div class="project-image" style="background-image: url('/3.jpg')"></div>
         <h3>Extension de Maison</h3>
         <p>Extension de deux étages avec suite parentale</p>
-      </div>
+      </div> -->
     </div>
   </section>
 
   <section id="about" class="about">
     <h2>À Propos de Nous</h2>
-    <p>Avec plus de 20 ans d'expérience, nous sommes fiers d'offrir un artisanat et un service client exceptionnels. Notre équipe de professionnels qualifiés est dédiée à la réalisation de votre vision tout en maintenant les plus hauts standards de qualité et de sécurité.</p>
+    <p>Bienvenue dans notre entreprise familiale, spécialisée dans l’installation d’armoires de cuisine, de salle de bain et de rangement. Avec plusieurs années d’expérience, nous avons perfectionné notre savoir-faire pour offrir des installations de qualité supérieure.
+
+      Notre équipe professionnelle est dédiée à chaque projet, assurant des résultats impeccables qui répondent à vos attentes. Nous sommes passionnés par notre métier et nous nous engageons à transformer votre espace avec des solutions sur mesure et une finition irréprochable.
+      
+      Faites confiance à notre savoir-faire pour des résultats qui allient qualité, précision et satisfaction.</p>
+  </section>
+
+  <section id="team" class="team">
+    <h2>Our Team</h2>
+    <div class="team-grid">
+      <div class="team-card">
+        <img src="/team-1.jpg" alt="Team Member 1">
+        <h3>Christophe Sanchez</h3>
+        <p>Propriétaire</p>
+        <p>Christophe, un ébéniste avec plus de 40 ans d’expérience. Passionné par son travail , il a réalisé de nombreux projets de rénovation et de création d’armoire sur mesure. Son expertise et son dévouement garantissent des résultats de haute qualité, respectant vos attentes et vos délais.</p>
+      </div>
+      <div class="team-card">
+        <img src="/team-2.jpg" alt="Team Member 2">
+        <h3>Maxime Sanchez</h3>
+        <p>Propriétaire</p>
+        <p>Maxime a hérité de la passion de son père pour le métier de menuisier. Grâce à ses compétences et à son expérience, il réalise des travaux  de haute qualité. Son engagement envers la satisfaction client et son souci du détail garantissent des résultats impeccables.</p>
+      </div>
+    </div>
   </section>
 
   <section id="contact" class="contact">
@@ -93,10 +116,13 @@
         <button type="submit">Envoyer</button>
       </form>
       <div class="contact-info">
-        <h3>Contactez-Nous</h3>
-        <p>📱 (555) 123-4567</p>
-        <p>📧 info@eliteconstruction.com</p>
-        <p>📍 123 Builder Street, Construction City, ST 12345</p>
+        <h3>Téléphone</h3>
+        <p>📱 Christophe Sanchez : 514 704-0232</p>
+        <p>📱 Maxime Sanchez : 514 371-1047</p>
+        <h3>Courriel</h3>
+        <p>📧 info@espacesurmesure.ca</p>
+        <hr/>
+        <p>RBQ. : 5858-4814-01</p>
       </div>
     </div>
   </section>
