--- a/fr/index.html
+++ b/fr/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="fr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,7 +11,9 @@
 <body>
   <header>
     <nav>
-      <div class="logo">Espace Sur Mesure Inc.</div>
+      <div class="logo">
+        <img src="/Logo.svg" alt="Espace Sur Mesure Inc.">
+      </div>
       <div class="nav-links">
         <a href="#services">Services</a>
         <a href="#projects">Projets</a>
@@ -87,16 +88,16 @@
   </section>
 
   <section id="team" class="team">
-    <h2>Our Team</h2>
+    <h2>Notre Équipe</h2>
     <div class="team-grid">
-      <div class="team-card">
-        <img src="/team-1.jpg" alt="Team Member 1">
+      <div class="team-member">
+        <!-- <img src="/team1.jpg" alt="Christophe Sanchez"> -->
         <h3>Christophe Sanchez</h3>
         <p>Propriétaire</p>
         <p>Christophe, un ébéniste avec plus de 40 ans d’expérience. Passionné par son travail , il a réalisé de nombreux projets de rénovation et de création d’armoire sur mesure. Son expertise et son dévouement garantissent des résultats de haute qualité, respectant vos attentes et vos délais.</p>
       </div>
-      <div class="team-card">
-        <img src="/team-2.jpg" alt="Team Member 2">
+      <div class="team-member">
+        <!-- <img src="/team2.jpg" alt="Maxime Sanchez"> -->
         <h3>Maxime Sanchez</h3>
         <p>Propriétaire</p>
         <p>Maxime a hérité de la passion de son père pour le métier de menuisier. Grâce à ses compétences et à son expérience, il réalise des travaux  de haute qualité. Son engagement envers la satisfaction client et son souci du détail garantissent des résultats impeccables.</p>
@@ -108,27 +109,26 @@
     <h2>Contactez-Nous</h2>
     <div class="contact-container">
       <form id="contactForm" name="Soumission" netlify>
-        <input type="text" name="name" placeholder="Name" required>
-        <input type="email" name="email" placeholder="Email" required>
-        <input type="tel" name="phone" placeholder="Phone">
-        <textarea name="message" placeholder="Tell us about your project"
+        <input type="text" name="name" placeholder="Nom" required>
+        <input type="email" name="email" placeholder="Courriel" required>
+        <input type="tel" name="phone" placeholder="Téléphone">
+        <textarea name="message" placeholder="Dites-en nous plus sur votre projet"
           required></textarea>
         <button type="submit">Envoyer</button>
       </form>
       <div class="contact-info">
         <h3>Téléphone</h3>
-        <p>📱 Christophe Sanchez : 514 704-0232</p>
-        <p>📱 Maxime Sanchez : 514 371-1047</p>
+        <p>Christophe Sanchez : (514) 704-0232</p>
+        <p>Maxime Sanchez : (514) 371-1047</p>
         <h3>Courriel</h3>
-        <p>📧 info@espacesurmesure.ca</p>
-        <hr/>
+        <p>info@espacesurmesure.ca</p>
         <p>RBQ. : 5858-4814-01</p>
       </div>
     </div>
   </section>
 
   <footer>
-    <p>© 2025 Espace Sur Mesure Inc. Tout droits réservés.</p>
+    <p>© 2025 Tous droits réservés | Espace sur mesure inc.</p>
   </footer>
 
   <script type="module" src="/main.js"></script>
