Update contact information formatting and enhance team member animations

--- a/en/index.html
+++ b/en/index.html
@@ -111,12 +111,13 @@
         <button type="submit">Send</button>
       </form>
       <div class="contact-info">
-        <h3>Phone</h3>
-        <p>Christophe Sanchez : (514) 704-0232</p>
-        <p>Maxime Sanchez : (514) 371-1047</p>
-        <h3>Email</h3>
-        <p>info@espacesurmesure.ca</p>
-        <p>RBQ. : 5858-4814-01</p>
+        <h3>📞 Cellphone</h3>
+        <p style="margin-left: 1.5rem;">• Christophe Sanchez : (514) 704-0232</p>
+        <p style="margin-left: 1.5rem;">• Maxime Sanchez : (514) 371-1047</p>
+        <h3>✉️ Email</h3>
+        <p style="margin-left: 1.5rem;">• info@espacesurmesure.ca</p>
+        <h3>📜 RBQ Licence</h3>
+        <p style="margin-left: 1.5rem;">• 5858-4814-01</p>
       </div>
     </div>
   </section>
