--- a/fr/index.html
+++ b/fr/index.html
@@ -117,12 +117,13 @@
         <button type="submit">Envoyer</button>
       </form>
       <div class="contact-info">
-        <h3>Téléphone</h3>
-        <p>Christophe Sanchez : (514) 704-0232</p>
-        <p>Maxime Sanchez : (514) 371-1047</p>
-        <h3>Courriel</h3>
-        <p>info@espacesurmesure.ca</p>
-        <p>RBQ. : 5858-4814-01</p>
+        <h3>📞 Téléphone</h3>
+        <p style="margin-left: 1.5rem;">• Christophe Sanchez : (514) 704-0232</p>
+        <p style="margin-left: 1.5rem;">• Maxime Sanchez : (514) 371-1047</p>
+        <h3>✉️ Courriel</h3>
+        <p style="margin-left: 1.5rem;">• info@espacesurmesure.ca</p>
+        <h3>📜 Licence RBQ</h3>
+        <p style="margin-left: 1.5rem;">• 5858-4814-01</p>
       </div>
     </div>
   </section>
